--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-   <header>5 De Novembro</header>
+   <header>Memorial Vendetta</header>
 
    <section>
       <div class="chamada-texto">
@@ -32,7 +32,7 @@
       </div>
    </section>
 
-   <section>
+   <section class="categoria-videos">
       
          <div>
             <a href="https://www.youtube.com/watch?v=l8oy2SwFDgg&t">
